Revert "feat: Actualización swagger"
This reverts commit 0462ae68e60fca0c5a126984e54c89a7e2bb57ba.
